syntax = "proto3";
package chat;
option go_package = "github.com/hajsf/grpc/chat";

message MessageRequest {
  string body = 1;
}

message MessageResponse {
    string body = 1;
  }

service ChatService {
  rpc SayHello(MessageRequest) returns (MessageResponse) {}
}

// https://github.com/protocolbuffers/protobuf/releases/
// go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
// go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.1
// add ..\gopath\bin to your path, so that these execuatable files be recognized

// protoc --proto_path=chat --go_out=chat --go_opt=paths=source_relative chat.proto